<resources>
    <string name="app_name">Wakkey</string>
    <string name="alarma">Alarma</string>
    <string name="juegos">Juegos</string>
    <string name="cuenta_atras">Cuenta atrás</string>
    <string name="cronometro">Cronómetro</string>
    <string name="tic_tac_toe">Tic - Tac - Toe</string>
    <string name="juego_tic_tac_toe">Juego: Tic Tac Toe</string>
    <string name="activar_o_desactivar_alarma">Activar o desactivar alarma</string>
    <string name="d_as_activos_lunes_a_domingo">Días activos: lunes a domingo</string>
    <string name="l_m_x_j_v_s_d">L M X J V S D</string>
    <string name="hora_de_la_alarma_6_00">Hora de la alarma: 6:00</string>
    <string name="_6_00">6:00</string>
    <string name="a_adir_nueva_alarma">Añadir nueva alarma</string>
    <string name="opciones">Opciones</string>
    <string name="alarmas">Alarmas</string>
    <string name="alarmas_guardadas">Alarmas guardadas</string>
    <string name="iniciar">Iniciar</string>
    <string name="vuelta">Vuelta</string>
    <string name="parar">Parar</string>
    <string name="reanudar">Reanudar</string>
    <string name="detener">Detener</string>
    <string name="tiempo_vuleta">Tiempo Vuleta</string>
    <string name="tiempo_total">Tiempo Total</string>
    <string name="seleccionar_juego">Seleccionar juego</string>
    <string name="seleccionar_dificultad">Seleccionar juego</string>
    <string name="seleccionar_sonido">Seleccionar juego</string>
    <string name="ordenar">Ordenar</string>
    <string name="eliminar">Eliminar</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="_10_00">10:00</string>
    <string name="nueva_alarma">Nueva Alarma</string>
    <string name="nombre_alarma">Nombre alarma</string>
    <string name="alarma_1">Alarma 1</string>
    <string name="selecciona_dificultad">Seleccionar dificultad</string>
    <string name="repetir_alarma">Repetir alarma</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="x">X</string>
    <string name="j">J</string>
    <string name="v">V</string>
    <string name="s">S</string>
    <string name="d">D</string>
    <string name="sonido_alarma">Sonido alarma</string>
    <string name="cancelar">Cancelar</string>
    <string name="anadir">Añadir</string>
    <string name="_00">00</string>
    <string name="dospuntos">:</string>
    <string name="_6">6</string>
    <string name="resuelve_las_sumas_lo_antes_posible">¡¡Resuelve las sumas lo antes posible!!</string>
    <string name="_5_00">5:00</string>
    <string name="insertarnum">___</string>
    <string name="verificar">Verificar</string>
    <string name="_5_8_6">5 + 8 + 6 =</string>
    <string name="hora_actual">Hora actual:</string>
    <string name="detener_alarma">Detener Alarma</string>
    <string name="jugar">JUGAR</string>
    <string name="nombre_del_juego">Nombre del juego</string>
    <string name="descripci_n_del_juego">Descripción del juego</string>
    <string name="resuelve_las_restas_lo_antes_posible">¡¡Resuelve las restas lo antes posible!!</string>
    <string name="_5_6">5 - 6</string>
    <string name="hora_de_despertarse">¡Hora de despertarse!</string>
    <string name="sopla_en_el_micr_fono_hasta_completar_la_barra">¡¡Sopla en el micrófono hasta completar la barra!!</string>
    <string name="agita_el_m_vil_hasta_despertar_a_kkey">¡¡Agita el móvil hasta despertar a Kkey!!</string>
    <string name="escanea_el_c_digo_de_barras">Escanea el código de barras</string>
    <string name="encender_flash">Encender Flash</string>

    <string-array name="juegos_array">
        <item>Desactivar Manualmente</item>
        <item>Despeina a Kkey</item>
        <item>Despierta a Kkey</item>
        <item>¡Resta!</item>
        <item>¡Suma!</item>
        <item>Scan Kkey</item>
    </string-array>

    <string-array name="dificultad_array">
        <item>Fácil</item>
        <item>Medio</item>
        <item>Difícil</item>
    </string-array>

    <string-array name="sonidos_array">
        <item>Crystal Waters</item>
        <item>Hawaii</item>
        <item>Lofi</item>
        <item>Morning</item>
        <item>Piano</item>
    </string-array>


</resources>