<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutPrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Contenedor principal -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_marginTop="32dp">

        <!-- Título fuera del recuadro -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nueva_alarma"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="16dp"
            android:textSize="34sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <!-- Recuadro principal -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/rounder_container"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Hora editable -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="24dp">


                <EditText
                    android:id="@+id/etHora"
                    android:layout_width="23dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_6"
                    android:textStyle="bold"
                    android:textSize="36sp"
                    android:textColor="@color/black"
                    android:inputType="number"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dospuntos"
                    android:textStyle="bold"
                    android:textSize="36sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"/>

                <EditText
                    android:id="@+id/etMinutos"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_00"
                    android:textStyle="bold"
                    android:textSize="36sp"
                    android:textColor="@color/black"
                    android:inputType="number"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:gravity="center"/>

            </LinearLayout>

            <!-- Nombre alarma -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre_alarma"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginBottom="8dp"/>

            <EditText
                android:id="@+id/etNombreAlarma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:paddingVertical="12dp"
                android:text="@string/alarma_1"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginBottom="16dp"
                android:inputType="textCapWords"/>

            <!-- Seleccionar juego -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seleccionar_juego"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginBottom="8dp"/>

            <Spinner
                android:id="@+id/spinnerJuego"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:paddingVertical="12dp"
                android:layout_marginBottom="16dp"
                android:entries="@array/juegos_array"
                android:prompt="@string/seleccionar_juego"/>

            <!-- Dificultad del juego -->
            <TextView
                android:id="@+id/tvDificultad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selecciona_dificultad"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginBottom="8dp"/>

            <Spinner
                android:id="@+id/spinnerDificultad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:paddingVertical="12dp"
                android:layout_marginBottom="16dp"
                android:entries="@array/dificultad_array"
                android:prompt="@string/seleccionar_dificultad"/>

            <!-- Repetir alarma -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repetir_alarma"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginBottom="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <CheckBox
                    android:id="@+id/cbLunes"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:minHeight="48dp"
                    android:minWidth="48dp"
                    android:text="@string/l"
                    android:gravity="center"/>

                <CheckBox
                    android:id="@+id/cbMartes"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:minHeight="48dp"
                    android:minWidth="48dp"
                    android:text="@string/m"
                    android:gravity="center"/>

                <CheckBox
                    android:id="@+id/cbMiercoles"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:minHeight="48dp"
                    android:minWidth="48dp"
                    android:text="@string/x"
                    android:gravity="center"/>

                <CheckBox
                    android:id="@+id/cbJueves"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:minHeight="48dp"
                    android:minWidth="48dp"
                    android:text="@string/j"
                    android:gravity="center"/>

                <CheckBox
                    android:id="@+id/cbViernes"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:minHeight="48dp"
                    android:minWidth="48dp"
                    android:text="@string/v"
                    android:gravity="center"/>

                <CheckBox
                    android:id="@+id/cbSabado"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:minHeight="48dp"
                    android:minWidth="48dp"
                    android:text="@string/s"
                    android:gravity="center"/>

                <CheckBox
                    android:id="@+id/cbDomingo"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:minHeight="48dp"
                    android:minWidth="48dp"
                    android:text="@string/d"
                    android:gravity="center"/>
            </LinearLayout>

            <!-- Sonido alarma -->
            <TextView
                android:id="@+id/tvSonidoAlarma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sonido_alarma"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginBottom="8dp"/>

            <Spinner
                android:id="@+id/spinnerSonido"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:minHeight="48dp"
                android:entries="@array/sonidos_array"
                android:prompt="@string/seleccionar_sonido" />

        </LinearLayout>
    </LinearLayout>

    <!-- Botones Cancelar y Añadir -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:paddingHorizontal="24dp">

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/cancelar"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:background="@drawable/border_button"/>

        <View
            android:layout_width="16dp"
            android:layout_height="1dp"/>

        <Button
            android:id="@+id/btnAnadir"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/anadir"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:background="@drawable/border_button"/>
    </LinearLayout>

    <!-- Menú inferior  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:weightSum="4"
        android:background="@color/menu_background">

        <Button
            android:id="@+id/btnAlarma"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/alarma"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:backgroundTint="@android:color/transparent"
            android:stateListAnimator="@null"
            android:padding="4dp" />

        <Button
            android:id="@+id/btnJuegos"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/juegos"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="#808080"
            android:gravity="center"
            android:backgroundTint="@android:color/transparent"
            android:stateListAnimator="@null"
            android:padding="4dp" />

        <Button
            android:id="@+id/btnCronometro"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cronometro"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="#808080"
            android:gravity="center"
            android:backgroundTint="@android:color/transparent"
            android:stateListAnimator="@null"
            android:padding="4dp" />

        <Button
            android:id="@+id/btnCuentaAtras"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cuenta_atras"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="#808080"
            android:gravity="center"
            android:backgroundTint="@android:color/transparent"
            android:stateListAnimator="@null"
            android:padding="4dp" />
    </LinearLayout>
</LinearLayout>