<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="16dp">

    <!-- Texto para mostrar la hora actual -->
    <TextView

        android:id="@+id/tvHoraActual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hora_de_despertarse"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        android:paddingBottom="20dp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@drawable/rounder_container"
        android:padding="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/kkeydormido"
        android:contentDescription="@string/alarma"
        />
    </LinearLayout>

    <!-- Botón para detener la alarma -->
    <Button
        android:id="@+id/btnDetenerAlarma"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:text="@string/detener"
        android:textStyle="bold"
        android:background="@drawable/border_button"
        android:textSize="20sp"
        android:layout_marginBottom="50dp"
        android:textColor="@color/black"
        android:layout_marginTop="40dp" />

</LinearLayout>
